added simple registry of plugins

--- a/available_plugins.yaml
+++ b/available_plugins.yaml
@@ -2,3 +2,4 @@
 retrospec-puppet:
   project_url: https://github.com/nwops/retrospec-puppet
   gem: retrospec-puppet
+  description: Provides puppet module development automation
