updated cli options

--- a/available_plugins.yaml
+++ b/available_plugins.yaml
@@ -1,5 +1,5 @@
 ---
-retrospec-puppet:
-  project_url: https://github.com/nwops/retrospec-puppet
-  gem: retrospec-puppet
-  description: Provides puppet module development automation
+retrospec-plugingen:
+  project_url: https://github.com/nwops/retrospec-plugingen
+  gem: retrospec-plugingen
+  description: Provides instant retrospec plugin creation
